# SunnyLand

./: CMakeLists.txt  README.md  SunnyLand-Windows.vcxproj  SunnyLand-Windows.vcxproj.filters  SunnyLand.cpp  SunnyLand.h  SunnyLand.slnx  main.cpp
.trae/documents/: 使用生成器模式重构LevelLoader.md  完善更新架构文档.md  实现最高分储存功能.md  实现结束场景（EndScene）.md  架构文档准确性修复计划.md  架构文档补充完善计划.md  迁移Behavior组件并实现GameObjectBuilder生成器模式.md  项目注释计划.md
assets/: config.json  save_data.json
assets/maps/: actor.tsj  level1.tmj  level2.tmj  tileset.tsj
cpp src/engine/render/: sprite.h
docs/: PROJECT_STRUCTURE.md
docs/architecture/: 01_project_overview.md  02_core_class_diagram.md  03_main_loop_sequence.md  04_directory_structure.md  05_key_mechanisms_part1.md  06_key_mechanisms_part2.md  07_key_mechanisms_part3.md  08_key_mechanisms_part4.md  09_development_guidelines.md  10_build_guide.md  11_api_reference.md
src/: main.cpp
src/engine/audio/: audio_locator.cpp  audio_locator.h  audio_player.cpp  audio_player.h  iaudio_player.h  log_audio_player.cpp  log_audio_player.h
src/engine/component/: ai_behavior.h  ai_component.cpp  ai_component.h  animation_component.cpp  animation_component.h  audio_component.cpp  audio_component.h  collider_component.cpp  collider_component.h  component.h  health_component.cpp  health_component.h  parallax_component.cpp  parallax_component.h  physics_component.cpp  physics_component.h  sprite_component.cpp  sprite_component.h  tilelayer_component.cpp  tilelayer_component.h  transform_component.cpp  transform_component.h
src/engine/component/behaviors/: jump_behavior.cpp  jump_behavior.h  patrol_behavior.cpp  patrol_behavior.h  up_down_behavior.cpp  up_down_behavior.h
src/engine/core/: config.cpp  config.h  context.cpp  context.h  game_app.cpp  game_app.h  game_state.cpp  game_state.h  time.cpp  time.h
src/engine/input/: input_manager.cpp  input_manager.h
src/engine/interface/: observer.cpp  observer.h  subject.cpp  subject.h
src/engine/object/: game_object.cpp  game_object.h  object_builder.cpp  object_builder.h
src/engine/physics/: collider.h  collision.cpp  physics_engine.cpp  physics_engine.h
src/engine/render/: animation.cpp  animation.h  camera.cpp  camera.h  renderer.cpp  renderer.h  sprite.h  text_renderer.cpp  text_renderer.h
src/engine/resource/: audio_manager.cpp  audio_manager.h  font_manager.cpp  font_manager.h  resource_manager.cpp  resource_manager.h  texture_manager.cpp  texture_manager.h
src/engine/scene/: level_loader.cpp  level_loader.h  scene.cpp  scene.h  scene_manager.cpp  scene_manager.h
src/engine/ui/: ui_button.cpp  ui_button.h  ui_element.cpp  ui_element.h  ui_image.cpp  ui_image.h  ui_interactive.cpp  ui_interactive.h  ui_manager.cpp  ui_manager.h  ui_panel.cpp  ui_panel.h  ui_text.cpp  ui_text.h
src/engine/ui/state/: hover_state.cpp  hover_state.h  normal_state.cpp  normal_state.h  pressed_state.cpp  pressed_state.h  ui_state.h
src/engine/utils/: alignment.h  math.h
src/game/command/: command_mapper.cpp  command_mapper.h  player_commands.cpp  player_commands.h
src/game/component/: player_component.cpp  player_component.h
src/game/component/behaviors/: jump_behavior.cpp  jump_behavior.h  patrol_behavior.cpp  patrol_behavior.h  up_down_behavior.cpp  up_down_behavior.h
src/game/component/state/: Fall_state.cpp  Fall_state.h  climb_state.cpp  climb_state.h  dead_state.cpp  dead_state.h  hurt_state.cpp  hurt_state.h  idle_state.cpp  idle_state.h  jump_state.cpp  jump_state.h  player_state.cpp  player_state.h  walk_state.cpp  walk_state.h
src/game/data/: session_data.cpp  session_data.h
src/game/object/: game_object_builder.cpp  game_object_builder.h
src/game/scene/: end_scene.cpp  end_scene.h  game_scene.cpp  game_scene.h  helps_scene.cpp  helps_scene.h  menu_scene.cpp  menu_scene.h  title_scene.cpp  title_scene.h
